<resources>
    <string name="app_name" formatted="true">StuHub</string>
    <string name="facebook_app_id">208262689903648</string>
    <string name="fb_login_protocol_scheme">fb208262689903648</string>
    <string name="home">Home</string>
    <string name="home_title">\t\t\tStuHub</string>
    <string name="profile">Profile</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="about">About</string>
    <string name="default_notification_channel_id">StuHub</string>
    <string-array name="branch">
        <item>Computer Science and Engineering</item>
        <item>Electrical and Electronics Engineering</item>
        <item>Electrical and Communication Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Civil Engineering</item>
        <item>Metallurgical and Materials Engineering</item>
        <item>Manufacturing Engineering</item>
        <item>Others</item>
    </string-array>
    <string-array name="branch_cse">
        <item>CS101 Engineering Physics</item>
        <item>CS102 Engineering Mathematics - I</item>
        <item>CS103 Engineering Graphics</item>
        <item>CS104 Basic Electrical Engineering</item>
        <item>CS105 English for Communication</item>
        <item>CS106 Computer Programming</item>
        <item>CS107 Engineering Physics Lab</item>
        <item>CS108 Basic Electrical Engineering Lab</item>
        <item>CS109 Engineering Graphics Lab</item>
        <item>CS110 Computer Programming Lab</item>

        <item>CS201 Engineering Chemistry</item>
        <item>CS202 Engineering Mathematics - II</item>
        <item>CS203 Basic Electronics Engineering</item>
        <item>CS204 Programming and Data Structure</item>
        <item>CS205 Switching Circuit and Logic Design</item>
        <item>CS206 Engineering Chemistry Lab</item>
        <item>CS207 Basic Electronics Engineering Lab</item>
        <item>CS208 Programming and Data Structure Lab</item>
        <item>CS209 Workshop Technology</item>

        <item>CS301 Introduction to Soft Skills</item>
        <item>CS302 Engineering Mathematics - III</item>
        <item>CS303 Discrete Mathematics</item>
        <item>CS304 Design and Analysis of Algorithms</item>
        <item>CS305 Computer Organization and Architecture</item>
        <item>CS306 Design and Analysis of Algorithms Lab</item>
        <item>CS307 Numerical Methods Lab</item>
        <item>CS308 Computer Organization and Architecture Lab</item>

        <item>CS401 Database Management System</item>
        <item>CS402 Theory of Computation</item>
        <item>CS403 Microprocessors and Interfacing</item>
        <item>CS404 Data Communication</item>
        <item>CS405 Software Engineering</item>
        <item>CS406 Database Management System Lab</item>
        <item>CS407 Microprocessors and Interfacing Lab</item>
        <item>CS408 Software Engineering Lab</item>

        <item>CS501 Operating System</item>
        <item>CS502 Computer Networks</item>
        <item>CS503 Object Oriented System Design</item>
        <item>CS504 Computer Graphics</item>
        <item>CS505 Professional Elective</item>
        <item>CS506 Operating System Lab</item>
        <item>CS507 Object Oriented System Design Lab</item>
        <item>CS508 Computer Graphics Lab</item>

        <item>CS601 Parallel and Distributed Computing</item>
        <item>CS602 Advanced Computer Architecture</item>
        <item>CS603Compiler Design</item>
        <item>CS604 Professional Elective - II</item>
        <item>CS605 Free Elective - I</item>
        <item>CS606 Compiler Design Lab</item>
        <item>CS607 Free Elective - I Lab</item>
        <item>CS608 Seminar</item>

        <item>CS701 Organizational Behavior and Industrial Psycholog</item>
        <item>CS702 Industrial Economics</item>
        <item>CS703 Artificial Intelligence and Applications</item>
        <item>CS704 Professional Elective - III</item>
        <item>CS705 Free Elective - II</item>
        <item>CS706 Industrial Training</item>
        <item>CS707 Free Elective - II Lab</item>
        <item>CS708 Major Project</item>

        <item>CS801 Management Information System</item>
        <item>CS802 Distributed Operating Systems</item>
        <item>CS803 Professional Elective - IV</item>
        <item>CS804 Free Elective - III</item>
        <item>CS805 Free Elective - III Lab</item>
        <item>CS806 Major Project</item>
    </string-array>
    <string-array name="branch_eee">
        <item>EE101 Engineering Physics</item>
        <item>EE102 Engineering Mathematics - I</item>
        <item>EE103 Engineering Graphics</item>
        <item>EE104 Basic Electronics Engineering</item>
        <item>EE105 English for Communication</item>
        <item>EE106 Basic Circuit Theory</item>
        <item>EE107 Engineering Physics Lab</item>
        <item>EE108 Engineering Graphics Lab</item>
        <item>EE109 Basic Electronics Engineering Lab</item>

        <item>EE201 Engineering Chemistry</item>
        <item>EE202 Engineering Mathematics - II</item>
        <item>EE203 Basic Mechanical Engineering</item>
        <item>EE204 Fundamentals of Electro Mechanics</item>
        <item>EE205 Mechanics of Materials</item>
        <item>EE206 Engineering Chemistry Lab</item>
        <item>EE207 Basic Mechanical Engineering Lab</item>
        <item>EE208 Electro Mechanics Lab</item>
        <item>EE209 Workshop Technology</item>

        <item>EE301 Introduction to Soft Skills</item>
        <item>EE302 Electrical and Electronics Measurement</item>
        <item>EE303 Engineering Mathematics - III</item>
        <item>EE304 Network Analysis and Synthesis</item>
        <item>EE305 Analog Electronics</item>
        <item>EE306 Power System - I</item>
        <item>EE307 Electrical Measurement Lab</item>
        <item>EE308 Analog Electronics Lab</item>

        <item>EE401 Industrial Economics and Accountancy</item>
        <item>EE402 Electromagnetic Fields</item>
        <item>EE403 Electrical Machines - I</item>
        <item>EE404 Digital Electronics</item>
        <item>EE405 Signals and Systems</item>
        <item>EE406 Electrical Machines - I Lab</item>
        <item>EE407 Signals and Networks Lab</item>
        <item>EE408 Digital Electronics Lab</item>

        <item>EE501 Computer Architecture and Operating System</item>
        <item>EE502 Electrical Machine - II</item>
        <item>EE503 Control Systems</item>
        <item>EE504 Power Systems - II</item>
        <item>EE505 Instrumentation</item>
        <item>EE506 Control Systems Lab</item>
        <item>EE507 Electrical Machine - II Lab</item>
        <item>EE508 Power Systems - II Lab</item>

        <item>EE601 Power Electronics</item>
        <item>EE602 Microprocessors and Microcontrollers</item>
        <item>EE603 Elective - I</item>
        <item>EE604 Elective - II</item>
        <item>EE605 Microprocessors and Microcontrollers Lab</item>
        <item>EE606 Instrumentation Lab</item>
        <item>EE607 Power Electronics Lab</item>
        <item>EE608 Comprehensive Viva - Voce</item>

        <item>EE701 Organizational Behaviour and Industrial Psychology</item>
        <item>EE702 Digital Signals Processing</item>
        <item>EE703 Communication Systems</item>
        <item>EE704 Elective - III</item>
        <item>EE705 Elective - IV</item>
        <item>EE706 Electronics Systems Design Lab</item>
        <item>EE707 Power Systems Design Lab</item>
        <item>EE708 Minor Project</item>
        <item>EE709 Industrial Training</item>

        <item>EE801 Basic Environmental Engineering</item>
        <item>EE802 Selected Topic in IT</item>
        <item>EE803 Management Information System</item>
        <item>EE804 Elective - V</item>
        <item>EE805 Major Project</item>
        <item>EE806 General Proficiency</item>
    </string-array>
    <string-array name="branch_ece">
        <item>EL101 Engineering Physics</item>
        <item>EL102 Engineering Mathematics - I</item>
        <item>EL103 Engineering Graphics</item>
        <item>EL104 Basic Electrical Engineering</item>
        <item>EL105 English for Communication</item>
        <item>EL106 Material Science</item>
        <item>EL107 Engineering Physics Lab</item>
        <item>EL108 Engineering Graphics Lab</item>
        <item>EL109 Basic Electrical Engineering Lab</item>

        <item>EL201 Engineering Chemistry</item>
        <item>EL202 Engineering Mathematics - II</item>
        <item>EL203 Basic Mechanical Engineering</item>
        <item>EL204 C Programming</item>
        <item>EL205 Semiconductor Devices and Circuits</item>
        <item>EL206 Engineering Chemistry Lab</item>
        <item>EL207 Basic Mechanical Engineering Lab</item>
        <item>EL208 Semiconductor Devices and Circuits Lab</item>
        <item>EL209 Workshop Technology</item>

        <item>EL301 Electrical Machine</item>
        <item>EL302 Industrial Economics and Accountancy</item>
        <item>EL303 Engineering Mathematics - III</item>
        <item>EL304 Analog Electronics</item>
        <item>EL305 Electromagnetic Engineering</item>
        <item>EL306 Electrical Machine Lab</item>
        <item>EL307 Analog Electronics Lab</item>
        <item>EL308 Probability and Numerical Method Lab</item>

        <item>EL401 Electronics instrumentation and Control</item>
        <item>EL402 Digital Electronics</item>
        <item>EL403 Analog Communication</item>
        <item>EL404 Data Structure</item>
        <item>EL405 Management Information System</item>
        <item>EL406 Analog Communication Lab</item>
        <item>EL407 Digital Electronics Lab</item>
        <item>EL408 Data Structure Lab</item>

        <item>EL501 Microprocessor and Interfacing</item>
        <item>EL502 Digital Communication</item>
        <item>EL503 Industrial Electronics</item>
        <item>EL504 Signal and Systems</item>
        <item>EL505 Introduction to Soft Skill</item>
        <item>EL506 Digital Communication Lab</item>
        <item>EL507 Industrial Electronics Lab</item>
        <item>EL508 Microprocessor Lab</item>

        <item>EL601 Data Communication and Networking</item>
        <item>EL602 VLSI Design</item>
        <item>EL603 Control System Engineering</item>
        <item>EL604 Embedded Systems</item>
        <item>EL605 Elective - I</item>
        <item>EL606 Control System Lab</item>
        <item>EL607 VLSI Lab</item>
        <item>EL608 Data Communication and Networking Lab</item>
        <item>EL609 Comprehensive Viva - Voce</item>

        <item>EL701 Digital Signals Processing</item>
        <item>EL702 Optical Communication</item>
        <item>EL703 Elective - II</item>
        <item>EL704 Elective - III</item>
        <item>EL705 Optical Communication Lab</item>
        <item>EL706 Digital Signals Processing Lab</item>
        <item>EL707 Industrial Training</item>
        <item>EL708 Minor Project</item>

        <item>EL801 Basic Environmental Engineering</item>
        <item>EL802 RF and Microwave Engineering</item>
        <item>EL803 Elective - IV</item>
        <item>EL804 Elective - V</item>
        <item>EL805 Major Project</item>
        <item>EL806 General Proficiency</item>
    </string-array>
</resources>