<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/com_facebook_button_login_silver_background_color_pressed"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingTop="2dp">

        <LinearLayout
            android:id="@+id/Home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="launchHome"
            android:orientation="vertical"
            android:soundEffectsEnabled="false">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:focusableInTouchMode="false"
                android:padding="2dp"
                android:src="@drawable/ic_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/home"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="launchProfile"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:focusableInTouchMode="false"
                android:padding="2dp"
                android:src="@drawable/ic_profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/profile"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Download"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="launchDownload"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:src="@drawable/ic_download" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/download"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Upload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="launchUpload"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:src="@drawable/ic_upload" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/upload"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/About"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="launchAbout"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:src="@drawable/ic_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/about"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>